--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://websseu.github.io/fontkor/fontkor.css");
+@import url("https://websseu.github.io/fffont/fontkor.css");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
@@ -17,6 +17,18 @@ html {
 }
 .poppins {
   font-family: "Poppins";
+}
+.star {
+  position: relative;
+}
+.star::after {
+  content: "";
+  width: 100%;
+  height: 30px;
+  background-color: #f8f7f1;
+  position: absolute;
+  left: 0;
+  bottom: -30px;
 }
 
 @layer components {
